--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -7,5 +7,5 @@ services:
                 ports:
                         - "10050:10050"
                 environment:    
-                        ZBX_HOSTNAME: YOUR_SERVER_NAME
-                        ZBX_SERVER_HOST: YOUR_IP
+                        ZBX_HOSTNAME: dsiZabbixServer
+                        ZBX_SERVER_HOST: 10.0.0.158
