--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,11 +1,27 @@
 version: '3'
 
 services:
-        zabbix-agent:
+        zabbix-server:
                 restart: always
-                image: zabbix/zabbix-agent:latest
+                image: zabbix/zabbix-server-mysql:latest
                 ports:
-                        - "10050:10050"
-                environment:    
-                        ZBX_HOSTNAME: dsiZabbixServer
-                        ZBX_SERVER_HOST: 10.0.0.158
+                        — “10050:10050”
+                        — “10051:10051”
+                environment:
+                        DB_SERVER_HOST: 127.0.0.1
+                        MYSQL_USER: 'zabbix'
+                        MYSQL_PASSWORD: 'zabbix'
+
+        zabbix-web-nginx-mysql:
+                restart: always
+                image: zabbix/zabbix-web-nginx-mysql:latest
+                ports:
+                        — “80:80”
+                links:
+                      — zabbix-server:zabbix-server
+                environment:
+                DB_SERVER_HOST: 127.0.0.1
+                MYSQL_USER: 'zabbix'
+                MYSQL_PASSWORD: 'zabbix'
+                ZBX_SERVER_HOST: 127.0.0.1
+        PHP_TZ: 'Asia/Dhaka'
